@@ -511,6 +511,7 @@ modules.versionCheck.advanced.backup=Do backup before download
 modules.versionCheck.advanced.restart=Restart after download
 modules.versionCheck.storeNotSet=store.url environment property blank, cannot check for updates
 modules.consistencyCheck=Version consistency check failed: {0} 
+modules.versionCheck.storeResponseEmpty=Store response was empty
 modules.downloadUpgrades.stage.start=Starting...
 modules.downloadUpgrades.stage.backup=Backing up...
 modules.downloadUpgrades.stage.download=Downloading modules...
